--- a/logreg-scratch.ipynb
+++ b/logreg-scratch.ipynb
@@ -1,26 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -41,10 +19,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "X_train: (455, 30), X_test (114, 30)\ny_train: (455,), y_test: (114,)\n"
+      "X_train: (455, 30), X_test (114, 30)\n",
+      "y_train: (455,), y_test: (114,)\n"
      ]
     }
    ],
@@ -113,10 +92,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Elapsed time: 0.0477\nAccuracy: 0.868421052631579\n"
+      "Elapsed time: 0.0477\n",
+      "Accuracy: 0.868421052631579\n"
      ]
     }
    ],
@@ -128,5 +108,29 @@
     "print(f'Accuracy: {np.sum(y_test == pred.astype(int)) / y_test.size}')"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5-final"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
